add SEO meta data

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NOIS Network</title>
+    <title>Nois Network | Get randomness on the fly</title>
+    <meta name="description" content="Nois Network brings random beacons to Cosmos blockchains without compromising security or usability by leveraging drand and IBC.">
+    <meta property="og:title" content="Nois Network | Get randomness on the fly">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:description" content="Nois Network brings random beacons to Cosmos blockchains without compromising security or usability by leveraging drand and IBC.">
+    <meta property="og:image" content="https://nois.network/logo.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@NoisNetwork">
+    <meta name="twitter:creator" content="@NoisNetwork">
   </head>
   <body>
     <div id="app"></div>
