--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@NoisNetwork">
     <meta name="twitter:creator" content="@NoisNetwork">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200&family=Inter:wght@300;500&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
