--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200&family=Inter:wght@300;500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="flex flex-col h-screen"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
