--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="preload" as="font" href="/fonts/Satoshi-Bold.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="/fonts/Satoshi-Medium.woff2" type="font/woff2" crossorigin="anonymous">
   </head>
   <body>
     <div id="app" class="flex flex-col h-screen"></div>
