--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/favicons/site.webmanifest">
+    <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#0c0914">
+    <meta name="msapplication-TileColor" content="#0c0914">
+    <meta name="theme-color" content="#0c0914">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nois Network | Get randomness on the fly</title>
     <meta name="description" content="Nois Network brings random beacons to Cosmos blockchains without compromising security or usability by leveraging drand and IBC.">
