--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Nois Network | Get randomness on the fly">
     <meta property="og:locale" content="en_US">
     <meta property="og:description" content="Nois Network brings random beacons to Cosmos blockchains without compromising security or usability by leveraging drand and IBC.">
-    <meta property="og:image" content="/social-thumbnail.png">
+    <meta property="og:image" content="https://nois-network-website.vercel.app/social-thumbnail.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@NoisNetwork">
     <meta name="twitter:creator" content="@NoisNetwork">
