Update Twitter user and title

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <meta name="msapplication-TileColor" content="#0c0914">
     <meta name="theme-color" content="#0c0914">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nois Network | Get randomness on the fly</title>
+    <title>Nois – Reliable Randomness</title>
     <meta name="description" content="Nois Network brings random beacons to Cosmos blockchains without compromising security or usability by leveraging drand and IBC.">
-    <meta property="og:title" content="Nois Network | Get randomness on the fly">
+    <meta property="og:title" content="Nois – Reliable Randomness">
     <meta property="og:locale" content="en_US">
     <meta property="og:description" content="Nois Network brings random beacons to Cosmos blockchains without compromising security or usability by leveraging drand and IBC.">
-    <meta property="og:image" content="https://nois-network-website.vercel.app/social-thumbnail.png">
+    <meta property="og:image" content="https://nois.network/social-thumbnail.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@NoisNetwork">
-    <meta name="twitter:creator" content="@NoisNetwork">
+    <meta name="twitter:site" content="@NoisRNG">
+    <meta name="twitter:creator" content="@NoisRNG">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200&family=Inter:wght@300;500&display=swap" rel="stylesheet">
